--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     -->
 
     <h1 id="header">My products</h1>
+    <h1 id="header">My products</h1>
     <script src="js/index.js"></script>
   </body>
 </html>
