--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 
     -->
 
-    <h1 id="header">My products</h1>
-    <h1 id="header">My products</h1>
+    <h1 id="header">My products
+      <img src ="https://image.shutterstock.com/image-vector/luxury-minimal-classic-modern-typeface-600w-1673925889.jpg" id ="header-img"/>
+    </h1>
+    
+   
     <script src="js/index.js"></script>
   </body>
 </html>
