--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         src="https://image.shutterstock.com/image-vector/luxury-minimal-classic-modern-typeface-600w-1673925889.jpg"
         id="header-img"
       />
-      <nav id="nav-bar"></nav>
+      <nav id="nav-bar">
+        <a href="#" class ="nav-link">Video</a>
+        <a href="#" class ="nav-link">Pricing</a>
+        <a href="#" class ="nav-link">Features</a>
+      </nav>
     </h1>
 
     <script src="js/index.js"></script>
