--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
         id="header-img"
       />
       <nav id="nav-bar">
-        <a href="#" class ="nav-link">Video</a>
-        <a href="#" class ="nav-link">Pricing</a>
-        <a href="#" class ="nav-link">Features</a>
+        <a href="#video" class="nav-link">Video</a>
+        <a href="#pricing" class="nav-link">Pricing</a>
+        <a href="#features" class="nav-link">Features</a>
       </nav>
+
+      <p id="video">This is a video</p>
+      <p id="pricing">This is a pricing</p>
+      <p id="features">This is a feature</p>
     </h1>
 
     <script src="js/index.js"></script>
