--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
         <a href="#features" class="nav-link">Features</a>
       </nav>
 
-      <p id="video">This is a video</p>
+      <video id = "video">
+        <source src="https://www.youtube.com/watch?v=JA8dbIuaZZw"/>
+
+      </video>
       <p id="pricing">This is a pricing</p>
       <p id="features">This is a feature</p>
+      
     </h1>
 
     <script src="js/index.js"></script>
