--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <a href="#features" class="nav-link">Features</a>
       </nav>
 
-      <video id = "video">
-        <source src="https://www.youtube.com/watch?v=JA8dbIuaZZw"/>
-
+      <video id="video">
+        <source src="https://www.youtube.com/watch?v=JA8dbIuaZZw" />
       </video>
       <p id="pricing">This is a pricing</p>
       <p id="features">This is a feature</p>
-      
     </h1>
+
+    <form id="form"></form>
 
     <script src="js/index.js"></script>
   </body>
