--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       <p id="features">This is a feature</p>
     </h1>
 
-    <form id="form"></form>
+    <form id="form">
+      <input type = "email" id = "email" name= "mail">
+    </form>
 
     <script src="js/index.js"></script>
   </body>
