--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
     </h1>
 
     <form id="form">
-      <input type = "email" id = "email" name= "mail">
+      <input
+        placeholder="Insert the E-mail address"
+        type="email"
+        id="email"
+        name="mail"
+      />
     </form>
 
     <script src="js/index.js"></script>
